--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ shadowJar {
 apply plugin: 'eclipse'
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.12'
+    gradleVersion = '3.1'
     distributionUrl = "https://services.gradle.org/distributions/gradle-$gradleVersion-all.zip"
 }
 
@@ -63,7 +63,11 @@ install.dependsOn shadowJar
 
 dependencies {
     compile 'com.github.Ericsson:eiffel-remrem-shared:0.1.4'
-    compile 'com.github.fge:json-schema-validator:2.2.6'
+    compile('com.github.fge:json-schema-validator:2.2.6')
+    {
+        exclude module: 'jackson-databind'
+    }
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.8.3'
     compile 'org.mockito:mockito-core:1.10.19'
     compile 'javax.inject:javax.inject:1'
     compile 'org.slf4j:slf4j-api:1.7.18'
