--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <scope>compile</scope>
+            <version>1.1.7</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
